{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 298,
  "lineage": "6c449801-4946-6a8d-441a-9b98b67cd9e0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:vpc/vpc-03871b6fb7b916cdf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-07ef7969bbda49b7f",
            "default_route_table_id": "rtb-0b13c2b676e2d7412",
            "default_security_group_id": "sg-005fb61095aac6f4d",
            "dhcp_options_id": "dopt-00f1452f3d456a460",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03871b6fb7b916cdf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b13c2b676e2d7412",
            "owner_id": "321510646715"
          }
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:loadbalancer/app/vilius-alb-alb/471d909c6188c484",
            "arn_suffix": "app/vilius-alb-alb/471d909c6188c484",
            "dns_name": "vilius-alb-alb-662073094.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:loadbalancer/app/vilius-alb-alb/471d909c6188c484",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "vilius-alb-alb",
            "security_groups": [
              "sg-068dfc2e7cdc735d4",
              "sg-0cf06e088bcf25ac0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-047de37d61d717a68"
              },
              {
                "subnet_id": "subnet-075c071b4d91858e0"
              }
            ],
            "subnets": [
              "subnet-047de37d61d717a68",
              "subnet-075c071b4d91858e0"
            ],
            "tags": {
              "Environment": "vilius-alb"
            },
            "vpc_id": "vpc-03871b6fb7b916cdf",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.aws_ec2.aws_security_group.allow_http",
            "module.aws_ec2.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:listener/app/vilius-alb-alb/471d909c6188c484/d5174c567aa49494",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-vilius-one-lb/9e9d4e422475a693",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:listener/app/vilius-alb-alb/471d909c6188c484/d5174c567aa49494",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:loadbalancer/app/vilius-alb-alb/471d909c6188c484",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "module.aws_alb.aws_lb.alb",
            "module.aws_ec2.aws_lb_target_group.blue",
            "module.aws_ec2.aws_security_group.allow_http",
            "module.aws_ec2.aws_security_group.allow_ssh"
          ]
        }
      ]
    },
    {
      "module": "module.aws_alb",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:vpc/vpc-01c95c2b9d3774c5d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ba289aa95ae23c05",
            "default_route_table_id": "rtb-054ebf7a238491e4f",
            "default_security_group_id": "sg-039bea85ec927b545",
            "dhcp_options_id": "dopt-00f1452f3d456a460",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01c95c2b9d3774c5d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-054ebf7a238491e4f",
            "owner_id": "321510646715"
          }
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-07395621c2260ace2",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07395621c2260ace2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02d4d033d735f20e2",
            "private_dns": "ip-172-31-60-127.eu-west-2.compute.internal",
            "private_ip": "172.31.60.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-010e5cb7f858f3098",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047de37d61d717a68",
            "tags": {
              "Name": "vilius-one-blue-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-068dfc2e7cdc735d4",
              "sg-0cf06e088bcf25ac0"
            ]
          },
          "dependencies": [
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_security_group.allow_http",
            "module.aws_ec2.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-08f040701245dabca",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f040701245dabca",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02f41b565322e5bc2",
            "private_dns": "ip-172-31-61-161.eu-west-2.compute.internal",
            "private_ip": "172.31.61.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0988eb73a0eb9ac93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075c071b4d91858e0",
            "tags": {
              "Name": "vilius-one-blue-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-068dfc2e7cdc735d4",
              "sg-0cf06e088bcf25ac0"
            ]
          },
          "dependencies": [
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_security_group.allow_http",
            "module.aws_ec2.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-0ff2d94d20ea741e0",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ff2d94d20ea741e0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00c0a3b103197dae8",
            "private_dns": "ip-172-31-60-86.eu-west-2.compute.internal",
            "private_ip": "172.31.60.86",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0339d1de23a972916",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-047de37d61d717a68",
            "tags": {
              "Name": "vilius-one-green-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-068dfc2e7cdc735d4",
              "sg-0cf06e088bcf25ac0"
            ]
          },
          "dependencies": [
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_security_group.allow_http",
            "module.aws_ec2.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff4c8fb495a5a50d",
            "arn": "arn:aws:ec2:eu-west-2:321510646715:instance/i-0868e50cae559cb1a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0868e50cae559cb1a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "communication-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ea49a307e056bb7a",
            "private_dns": "ip-172-31-61-43.eu-west-2.compute.internal",
            "private_ip": "172.31.61.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ee1fe5b33b4db122",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_http",
              "allow_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-075c071b4d91858e0",
            "tags": {
              "Name": "vilius-one-green-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-068dfc2e7cdc735d4",
              "sg-0cf06e088bcf25ac0"
            ]
          },
          "dependencies": [
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_security_group.allow_http",
            "module.aws_ec2.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-vilius-one-lb/9e9d4e422475a693",
            "arn_suffix": "targetgroup/blue-vilius-one-lb/9e9d4e422475a693",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-vilius-one-lb/9e9d4e422475a693",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "blue-vilius-one-lb",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03871b6fb7b916cdf"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-vilius-one-lb/9c012134a4d15c83",
            "arn_suffix": "targetgroup/green-vilius-one-lb/9c012134a4d15c83",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-vilius-one-lb/9c012134a4d15c83",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "green-vilius-one-lb",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03871b6fb7b916cdf"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-vilius-one-lb/9e9d4e422475a693-20210120145720260700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-vilius-one-lb/9e9d4e422475a693",
            "target_id": "i-07395621c2260ace2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.blue",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.blue",
            "module.aws_ec2.aws_security_group.allow_http",
            "module.aws_ec2.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-vilius-one-lb/9e9d4e422475a693-20210120145720226300000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/blue-vilius-one-lb/9e9d4e422475a693",
            "target_id": "i-08f040701245dabca"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.blue",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.blue",
            "module.aws_ec2.aws_security_group.allow_http",
            "module.aws_ec2.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-vilius-one-lb/9c012134a4d15c83-20210120145649604900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-vilius-one-lb/9c012134a4d15c83",
            "target_id": "i-0ff2d94d20ea741e0"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.green",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.green",
            "module.aws_ec2.aws_security_group.allow_http",
            "module.aws_ec2.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-vilius-one-lb/9c012134a4d15c83-20210120145649679200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:321510646715:targetgroup/green-vilius-one-lb/9c012134a4d15c83",
            "target_id": "i-0868e50cae559cb1a"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_ec2.aws_instance.green",
            "module.aws_ec2.aws_key_pair.communication_key",
            "module.aws_ec2.aws_lb_target_group.green",
            "module.aws_ec2.aws_security_group.allow_http",
            "module.aws_ec2.aws_security_group.allow_ssh",
            "module.aws_subnet.aws_subnet.public_green_blue"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:security-group/sg-0cf06e088bcf25ac0",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf06e088bcf25ac0",
            "ingress": [
              {
                "cidr_blocks": [
                  "85.206.68.114/32",
                  "172.31.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "321510646715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-03871b6fb7b916cdf"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:security-group/sg-068dfc2e7cdc735d4",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068dfc2e7cdc735d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "85.206.68.114/32",
                  "172.31.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "321510646715",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-03871b6fb7b916cdf"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_green_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:subnet/subnet-047de37d61d717a68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "172.31.60.0/24",
            "id": "subnet-047de37d61d717a68",
            "map_public_ip_on_launch": false,
            "owner_id": "321510646715",
            "tags": {
              "Name": "vilius-60-subnet"
            },
            "vpc_id": "vpc-03871b6fb7b916cdf"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:321510646715:subnet/subnet-075c071b4d91858e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "172.31.61.0/24",
            "id": "subnet-075c071b4d91858e0",
            "map_public_ip_on_launch": false,
            "owner_id": "321510646715",
            "tags": {
              "Name": "vilius-61-subnet"
            },
            "vpc_id": "vpc-03871b6fb7b916cdf"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "module.aws_subnet.data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}